# osc_ubct

./: .gitignore  .gitmodules  README.md  WorkspaceLayout.md  dev-log.md  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: README.md  pubspec.yaml
example/android/app/: build.gradle.kts
example/integration_test/: plugin_integration_test.dart  simple_test.dart
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/ios/RunnerTests/: RunnerTests.swift
example/lib/: main.dart
example/lib/common_view/: app_card.dart  badge_chip.dart
example/linux/: CMakeLists.txt
example/rust/: Cargo.toml
example/rust/src/: frb_generated.rs  lib.rs
example/rust/src/api/: camera.rs  mod.rs  osc.rs  tracking.rs
example/rust_builder/: pubspec.yaml
example/test/: widget_test.dart
example/web/: index.html  manifest.json
example/windows/: CMakeLists.txt
ios/: osc_ubct.podspec
ios/Classes/: OscUbctPlugin.swift
lib/: osc_ubct.dart  osc_ubct_method_channel.dart  osc_ubct_platform_interface.dart  osc_ubct_web.dart
linux/: CMakeLists.txt  osc_ubct_plugin.cc  osc_ubct_plugin_private.h
linux/test/: osc_ubct_plugin_test.cc
macos/: osc_ubct.podspec
macos/Classes/: OscUbctPlugin.swift
test/: osc_ubct_method_channel_test.dart  osc_ubct_test.dart
windows/: CMakeLists.txt  osc_ubct_plugin.cpp  osc_ubct_plugin.h  osc_ubct_plugin_c_api.cpp
windows/osc/: CMakeLists.txt  osc_sender.cpp  osc_sender.hpp
windows/test/: osc_ubct_plugin_test.cpp
xtask/src/: config.rs  summary.rs
(+82 files in other folders)
