[package]
name = "rust_lib_osc_ubct_example"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[features]
mockcam = []
opencv = ["dep:opencv"]
default = ["mockcam"]

[dependencies]
flutter_rust_bridge = "=2.11.1"
image = { version = "0.25", default-features = false, features = ["jpeg"] }
rosc = "0.11.4"
once_cell = "1"
parking_lot = "0.12"
anyhow = "1"
thiserror = "2.0.16"
opencv = { version = "0.95.1", optional = true }
libc = "0.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
